made sure the volumes bind to the correct location in the container

--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -3,7 +3,7 @@ services:
   web:
     image: ${IMAGE_NAME}
     volumes:
-       - "web-data:/app"
+       - "web-data:/opt/sparql-exploration"
     ports:
       - "3000"
     networks:
