mounting localtime to our containers to the time is correct inside them

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
     build: .
     volumes:
        - .:/opt/sparql-exploration
+       - /etc/localtime:/etc/localtime:ro
     ports:
       - "3000"
     labels:
