--- a/docker-cloud.yml
+++ b/docker-cloud.yml
@@ -9,4 +9,4 @@ lb:
 web:
   image: 'ukparliament/data-driven'
   ports:
-    - '3000'
+    - '3000'  # container port 3000 is specified in Dockerfile
