--- a/.travis.yml
+++ b/.travis.yml
@@ -30,11 +30,11 @@ before_install:
     - docker-compose version
   
 script:
-  - docker-compose build
-  - docker-compose run web rake spec
+  - docker-compose -f docker-compose.travis.yml build
+  - docker-compose -f docker-compose.travis.yml run web rake spec
   
 after_install:
-  - docker-compose down
+  - docker-compose -f docker-compose.travis.yml down
   
 notifications:
   slack: ukparliament:hWKdWMeZOVSiokWoz9GC6wK9
