--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ services:
   
 env:  
     global:
-        - DOCKER_VERSION=1.11.1-0~trusty
+        - DOCKER_VERSION=1.12.0
         - DOCKER_COMPOSE_VERSION=1.7.0
 
 before_install:  
