--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ services:
   
 env:  
     global:
-        - DOCKER_VERSION=1.12.0
+        - DOCKER_VERSION=1.11.1-0~trusty
         - DOCKER_COMPOSE_VERSION=1.7.0
 
 before_install:  
@@ -17,7 +17,7 @@ before_install:
     - apt-cache madison docker-engine
 
     # upgrade docker-engine to specific version
-    - sudo apt-get -o Dpkg::Options::="--force-confnew" install -y docker-engine=${DOCKER_VERSION}
+    - sudo apt-get -o Dpkg::Options::="--force-confnew" install -y docker-engine
 
     # reinstall docker-compose at specific version
     - sudo rm /usr/local/bin/docker-compose
