--- a/docker-cloud.yml
+++ b/docker-cloud.yml
@@ -7,6 +7,6 @@ lb:
   volumes:
     - '/var/run/docker.sock:/var/run/docker.sock'
 web:
-  image: 'ukparliament/data-driven'
+  image: 'ukpds/data-driven'
   ports:
     - '3000'  # container port 3000 is specified in Dockerfile
